# simple-snap

./: Cargo.toml  README.md  flake.nix
src/: ioctl.rs  main.rs
