[package]
name = "simple-snap"
version = "0.1.0"
edition = "2024"
description = "Minimalist BTRFS periodic snapshot tool"
license = "MIT"
categories = ["command-line-utilities", "filesystem"]
keywords = ["btrfs", "snapshot"]
repository = "https://github.com/oxalica/simple-snap"
exclude = ["flake.nix", "flake.lock"]

[dependencies]
anyhow = "1.0.98"
jiff = "0.2.15"
linux-raw-sys = { version = "0.10.0", features = ["btrfs", "ioctl"] }
palc = "0.0.1"
rustix = { version = "1.0.7", features = ["fs"] }
